--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ plotly==5.10.0
 numpy==1.21.6
 ta==0.10.2
 numerize==0.12
+streamlit-plotly-events==0.0.6
+streamlit-extras==0.2.5
+streamlit-aggrid==0.3.3
