--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ streamlit-plotly-events==0.0.6
 streamlit-extras==0.2.5
 streamlit-aggrid==0.3.3
 streamlit-toggle-switch==1.0.2
+gsheetsdb==0.1.13.1
